--- a/test/fixtures/rooms.yml
+++ b/test/fixtures/rooms.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  location: MyString
   capacity: 1
 
 two:
-  name: MyString
+  location: MyString
   capacity: 1
