--- a/test/fixtures/committees.yml
+++ b/test/fixtures/committees.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  academic_id: 1
-  student_id: 1
+  academic: one
+  student: one
 
 two:
-  academic_id: 1
-  student_id: 1
+  academic: two
+  student: two
