--- a/test/fixtures/academics.yml
+++ b/test/fixtures/academics.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  title: MyString
+  title: Dr
   first: MyString
   last: MyString
   work_phone: MyString
@@ -10,7 +10,7 @@ one:
   image_url: MyString
 
 two:
-  title: MyString
+  title: Prof.
   first: MyString
   last: MyString
   work_phone: MyString
