--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -4,7 +4,6 @@ one:
   first: MyString
   last: MyString
   registration: MyString
-  location: MyString
   photo_url: MyString
   interests: MyText
   programme: MyString
@@ -13,7 +12,7 @@ one:
   work_phone: MyString
   title: MyString
   funder: MyString
-  status: MyString
+  status: Completed
   started_on: 2012-10-11
   expected_on: 2012-10-11
   completed_on: 2012-10-11
@@ -22,7 +21,6 @@ two:
   first: MyString
   last: MyString
   registration: MyString
-  location: MyString
   photo_url: MyString
   interests: MyText
   programme: MyString
@@ -31,7 +29,7 @@ two:
   work_phone: MyString
   title: MyString
   funder: MyString
-  status: MyString
+  status: Completed
   started_on: 2012-10-11
   expected_on: 2012-10-11
   completed_on: 2012-10-11
