temporarily renamed cohort to stream

--- a/test/fixtures/instances.yml
+++ b/test/fixtures/instances.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  cohort: MyString
+  stream: MyString
   credits: 1
   atom_id: 1
   code: MyString
   status: MyString
 
 two:
-  cohort: MyString
+  stream: MyString
   credits: 1
   atom_id: 1
   code: MyString
