--- a/test/fixtures/examinations.yml
+++ b/test/fixtures/examinations.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  project_id: 1
-  academic_id: 1
+  project: one
+  academic: one
   comment: MyText
   presentation_mark: 1
   report_mark: 1
 
 two:
-  project_id: 1
-  academic_id: 1
+  project: two
+  academic: two
   comment: MyText
   presentation_mark: 1
   report_mark: 1
