--- a/test/fixtures/bonds.yml
+++ b/test/fixtures/bonds.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  atom_id: 1
-  molecule_id: 1
+  atom: one
+  molecule: one
 
 two:
-  atom_id: 1
-  molecule_id: 1
+  atom: two
+  molecule: two
